fix(FF-4325): fix gap for decorator hint

--- a/packages/fields/src/components/FieldDecorator/styles.module.scss
+++ b/packages/fields/src/components/FieldDecorator/styles.module.scss
@@ -58,6 +58,7 @@ $hint-icon-container: (
 
 .footer {
   display: flex;
+  gap: $dimension-050m;
   justify-content: space-between;
   box-sizing: border-box;
 
